--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="utf-8">
     <title>Blockchain</title>
   </head>
-  <body onload="startGame()">
+  <body onload="StartGame()">
     <p id="debug"></p>
-    <button id="stop" onclick="game.stop()" style="background-color: red;">STOP</button>
+    <button id="stop" onclick="Game.Stop()" style="background-color: red;">STOP</button>
   </body>
   <script src="main.js" charset="utf-8"></script>
+  <script src="Core.js" charset="utf-8"></script>
+  <script src="Rectangle.js" charset="utf-8"></script>
+  <script src="Player.js" charset="utf-8"></script>
+  <script src="Vector2.js" charset="utf-8"></script>
 </html>
