Concatenated into Objects.js

--- a/index.html
+++ b/index.html
@@ -10,7 +10,5 @@
   </body>
   <script src="main.js" charset="utf-8"></script>
   <script src="Core.js" charset="utf-8"></script>
-  <script src="Rectangle.js" charset="utf-8"></script>
-  <script src="Player.js" charset="utf-8"></script>
-  <script src="Vector2.js" charset="utf-8"></script>
+  <script src="Objects.js" charset="utf"></script>
 </html>
