Created Player class

--- a/index.html
+++ b/index.html
@@ -11,4 +11,5 @@
   <script src="main.js" charset="utf-8"></script>
   <script src="Core.js" charset="utf-8"></script>
   <script src="Objects.js" charset="utf"></script>
+  <script src="Player.js" charset="utf"></script>
 </html>
