Added Element maps

--- a/index.html
+++ b/index.html
@@ -12,4 +12,5 @@
   <script src="Core.js" charset="utf-8"></script>
   <script src="Objects.js" charset="utf"></script>
   <script src="Player.js" charset="utf"></script>
+  <script src="Maps.js" charset="utf"></script>
 </html>
