--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <p id="debug"></p>
     <button id="stop" onclick="Game.Stop()" style="background-color: red;">STOP</button>
   </body>
-  <script src="main.js" charset="utf-8"></script>
+  <script src="Initialize.js" charset="utf-8"></script>
   <script src="Core.js" charset="utf-8"></script>
   <script src="Objects.js" charset="utf"></script>
   <script src="Player.js" charset="utf"></script>
