'Created table tennis thumbnail and screenshot'

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Blockchain</title>
   </head>
   <body onload="StartGame()">
+  	<button id="screenshot" onclick="Game.Screenshot()">Screenshot</button>
   </body>
   <script src="Initialize.js" charset="utf-8"></script>
   <script src="Core.js" charset="utf-8"></script>
