'Progress on worm'

--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
     <meta charset="utf-8">
     <title>Blockchain</title>
   </head>
-  <body onload="StartGame()">
+  <body onload="startGame()">
   	<button id="screenshot" onclick="Game.Screenshot()">Screenshot</button>
   </body>
   <script src="Initialize.js" charset="utf-8"></script>
   <script src="Core.js" charset="utf-8"></script>
   <script src="Objects.js" charset="utf"></script>
-  <script src="Player.js" charset="utf"></script>
   <script src="Maps.js" charset="utf"></script>
 </html>
